--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,14 @@ h1,h2,h3 {
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   margin: 0;
-  color: #333;
+  color: rgb(11 12 12);
+  /* color: rgb(212 96 55) */
   font-family: 'Poppins';
-  background: #f2f2f2;
+  /* background: rgb(20 20 22); */
+  background: #141316;
 }
 nav {
   background: var(--primary);
