--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
-  color: rgb(11 12 12);
+  color: #1c1c1c;
   /* color: rgb(212 96 55) */
   font-family: 'Poppins';
   /* background: rgb(20 20 22); */
