--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+  padding: 0;
   color: #1c1c1c;
   /* color: rgb(212 96 55) */
   font-family: 'Poppins';
